Slot machine digital dynamic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile ('io.socket:socket.io-client:0.7.0') {
         exclude group: 'org.json', module: 'json'
     }
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
